deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wurfel-server
spec:
  selector: {app: wurfel-server}
  ports:
    - {name: http, port: 80, targetPort: http}
